# webui-juce-cmake-example

./: CMakeLists.txt  README.md
src/: HTTPServer.cpp  HTTPServer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utils.h
src/ui/: index.html
